# datakit

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
datakit/: __init__.py  cli.py  config.py
datakit/core/: __init__.py  dataset.py  labels.py  utils.py
datakit/formats/: __init__.py  yolo.py
datakit/operations/: __init__.py  class_merge.py  merge.py  remap.py  visualize.py
examples/: class_merge_example.py  merge_dataset.py  remap_example.py  visualize_example.py
tests/: __init__.py  helpers.py  test_class_merge.py  test_merge.py  test_remap.py  test_visualize.py
